# SortingVisualizer

./: .clang-format  .gitignore  CMakeLists.txt  README.md  install_ubuntu_required_libs.sh
cmake/: StaticAnalyzers.cmake
dependencies/: CMakeLists.txt
dependencies/sfml/: CMakeLists.txt
src/: CMakeLists.txt  Visualizer.cpp  Visualizer.hpp  main.cpp
src/algorithms/: BubbleSort.hpp  InsertionSort.hpp  MergeSort.hpp  QuickSort.hpp  SortingAlgorithm.cpp  SortingAlgorithm.hpp
