include(FetchContent)

FetchContent_Declare(
  sfml
  GIT_REPOSITORY "https://github.com/SFML/SFML"
  GIT_TAG 2f11710abc5aa478503a7ff3f9e654bd2078ebab # 2.5.1 Why as hash ? Quicker, because it doesn’t have to connect the remote to check if the tag hasn’t been modified.
)

FetchContent_Declare(
  imgui
  GIT_REPOSITORY https://github.com/ocornut/imgui
  GIT_TAG 35b1148efb839381b84de9290d9caf0b66ad7d03 # v1.82
)

FetchContent_Declare(
  imgui-sfml
  GIT_REPOSITORY https://github.com/eliasdaler/imgui-sfml
  GIT_TAG 82dc2033e51b8323857c3ae1cf1f458b3a933c35 # v2.3
)

message(STATUS "Fetching ImGui...")
FetchContent_MakeAvailable(imgui)

add_subdirectory(sfml)
add_subdirectory(imgui-sfml)
